[package]
name = "markflow"
version = "0.1.0"
description = "A high-performance markdown editor"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-remove-dir", "fs-rename-file", "dialog-open", "fs-create-dir", "shell-open", "fs-write-file", "fs-remove-file", "fs-read-dir", "fs-read-file", "dialog-save"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
